# eagleye

./: CONTRIBUTING.md  README.md  eagleye.repos
eagleye_core/navigation/include/navigation/: angular_velocity_offset_stop.hpp
eagleye_core/navigation/src/: angular_velocity_offset_stop.cpp  heading.cpp  position_interpolate.cpp
eagleye_rt/: CMakeLists.txt  package.xml
eagleye_rt/launch/: composable_eagleye_rt.launch.xml
eagleye_rt/src/: angular_velocity_offset_stop_node.cpp  correction_imu.cpp  distance_node.cpp  enable_additional_rolling_node.cpp  heading_interpolate_node.cpp  heading_node.cpp  height_node.cpp  monitor_node.cpp  position_interpolate_node.cpp  position_node.cpp  rolling_node.cpp  rtk_dead_reckoning_node.cpp  rtk_heading_node.cpp  slip_angle_node.cpp  slip_coefficient_node.cpp  smoothing_node.cpp  tf_converted_imu.cpp  trajectory_node.cpp  twist_relay.cpp  velocity_estimator_node.cpp  velocity_scale_factor_node.cpp  yaw_rate_offset_node.cpp  yaw_rate_offset_stop_node.cpp
eagleye_util/fix2pose/src/: fix2pose.cpp
eagleye_util/tf/urdf/: sensors.xacro
